# classify-wiki-articles

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: first.ipynb
wiki_articles/: __init__.py  dataset.py  features.py  plots.py
wiki_articles/modeling/: predict.py  train.py
