[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wiki_articles"
version = "0.0.1"
description = "this is a project to classify wikipedia articles into subject categories"
authors = [
  { name = "Bhalchandra Naik" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.8"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["wiki_articles"]
force_sort_within_sections = true
